--- a/.travis.yml
+++ b/.travis.yml
@@ -23,13 +23,10 @@ cache:
     - node_modules
 
 env:
-  global:
-  - CLOUDSDK_CORE_DISABLE_PROMPTS=1
-  matrix:
-  - TEST_MATRIX=assemble
-  - TEST_MATRIX=units
-  - TEST_MATRIX=android_test_kin_sdk
-  - TEST_MATRIX=android_test_backup_restore
+- TEST_MATRIX=assemble
+- TEST_MATRIX=units
+- TEST_MATRIX=android_test_kin_sdk
+- TEST_MATRIX=android_test_backup_restore
 
 android:
   components:
@@ -48,30 +45,27 @@ script:
       ./gradlew :kin-sdk:kin-sdk-sample:assembleDebug
       ./gradlew :kin-sdk:kin-sdk:assembleAndroidTest
       openssl aes-256-cbc -K $encrypted_ea088b084227_key -iv $encrypted_ea088b084227_iv -in firebase-test-lab-key.json.enc -out firebase-test-lab-key.json -d
-      if [ ! -d $HOME/google-cloud-sdk/bin ]; then
-        # The install script errors if this directory already exists,
-        # but Travis already creates it when we mark it as cached.
-        rm -rf $HOME/google-cloud-sdk;
-        curl https://sdk.cloud.google.com | bash;
+      tree -d ./google-cloud-sdk
+      if [ ! -d ${HOME}/google-cloud-sdk ]; then
+        wget https://dl.google.com/dl/cloudsdk/channels/rapid/downloads/google-cloud-sdk-220.0.0-linux-x86_64.tar.gz
+        tar xf google-cloud-sdk-220.0.0-linux-x86_64.tar.gz
       fi
-      echo "y" | gcloud components update beta
-      gcloud config set project remotedevicetest-e89f4
-      gcloud auth activate-service-account --key-file firebase-test-lab-key.json
-      gcloud firebase test android run  --type instrumentation --app kin-sdk/kin-sdk-sample/build/outputs/apk/debug/kin-sdk-sample-debug.apk --test  kin-sdk/kin-sdk/build/outputs/apk/androidTest/debug/kin-sdk-debug-androidTest.apk --device model=Nexus5X,version=25,locale=en --no-record-video  --no-performance-metrics --environment-variables coverage=true,coverageFile=/sdcard/tmp/code-coverage/connected/coverage.ec --directories-to-pull=/sdcard/tmp
+      echo "y" | ./google-cloud-sdk/bin/gcloud components update beta
+      ./google-cloud-sdk/bin/gcloud config set project remotedevicetest-e89f4
+      ./google-cloud-sdk/bin/gcloud auth activate-service-account --key-file firebase-test-lab-key.json
+      ./google-cloud-sdk/bin/gcloud firebase test android run  --type instrumentation --app kin-sdk/kin-sdk-sample/build/outputs/apk/debug/kin-sdk-sample-debug.apk --test  kin-sdk/kin-sdk/build/outputs/apk/androidTest/debug/kin-sdk-debug-androidTest.apk --device model=Nexus5X,version=25,locale=en --no-record-video  --no-performance-metrics --environment-variables coverage=true,coverageFile=/sdcard/tmp/code-coverage/connected/coverage.ec --directories-to-pull=/sdcard/tmp
     elif [ $TEST_MATRIX == "android_test_backup_restore" ]; then
       ./gradlew :kin-backup-and-restore:kin-backup-and-restore-sample:assembleDebug
       ./gradlew :kin-backup-and-restore:kin-backup-and-restore:assembleAndroidTest
       openssl aes-256-cbc -K $encrypted_ea088b084227_key -iv $encrypted_ea088b084227_iv -in firebase-test-lab-key.json.enc -out firebase-test-lab-key.json -d
-      if [ ! -d $HOME/google-cloud-sdk/bin ]; then
-        # The install script errors if this directory already exists,
-        # but Travis already creates it when we mark it as cached.
-        rm -rf $HOME/google-cloud-sdk;
-        curl https://sdk.cloud.google.com | bash;
+      if [ ! -d ${HOME}/google-cloud-sdk ]; then
+        wget https://dl.google.com/dl/cloudsdk/channels/rapid/downloads/google-cloud-sdk-220.0.0-linux-x86_64.tar.gz
+        tar xf google-cloud-sdk-220.0.0-linux-x86_64.tar.gz
       fi
-      echo "y" | gcloud components update beta
-      gcloud config set project remotedevicetest-e89f4
-      gcloud auth activate-service-account --key-file firebase-test-lab-key.json
-      gcloud firebase test android run --type instrumentation --app kin-backup-and-restore/kin-backup-and-restore-sample/build/outputs/apk/debug/kin-backup-and-restore-sample-debug.apk --test kin-backup-and-restore/kin-backup-and-restore/build/outputs/apk/androidTest/debug/kin-backup-and-restore-debug-androidTest.apk --device model=Nexus5X,version=25,locale=en --no-record-video --no-performance-metrics --environment-variables coverage=true,coverageFile=/sdcard/tmp/code-coverage/connected/coverage.ec --directories-to-pull=/sdcard/tmp
+      echo "y" | ./google-cloud-sdk/bin/gcloud components update beta
+      ./google-cloud-sdk/bin/gcloud config set project remotedevicetest-e89f4
+      ./google-cloud-sdk/bin/gcloud auth activate-service-account --key-file firebase-test-lab-key.json
+      ./google-cloud-sdk/bin/gcloud firebase test android run --type instrumentation --app kin-backup-and-restore/kin-backup-and-restore-sample/build/outputs/apk/debug/kin-backup-and-restore-sample-debug.apk --test kin-backup-and-restore/kin-backup-and-restore/build/outputs/apk/androidTest/debug/kin-backup-and-restore-debug-androidTest.apk --device model=Nexus5X,version=25,locale=en --no-record-video --no-performance-metrics --environment-variables coverage=true,coverageFile=/sdcard/tmp/code-coverage/connected/coverage.ec --directories-to-pull=/sdcard/tmp
     fi
 
 after_success:
