--- a/kin-backup-and-restore/kin-backup-and-restore-lib/build.gradle
+++ b/kin-backup-and-restore/kin-backup-and-restore-lib/build.gradle
@@ -43,6 +43,9 @@ dependencies {
     androidTestImplementation 'org.mockito:mockito-core:2.10.0'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'org.hamcrest:hamcrest-library:1.3'
+    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    androidTestImplementation 'com.android.support.test:rules:1.0.2'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
     testImplementation 'org.jetbrains.kotlin:kotlin-stdlib:1.2.71'
     testImplementation 'com.nhaarman.mockitokotlin2:mockito-kotlin:2.0.0-RC1'
