--- a/kin-backup-and-restore/kin-backup-and-restore-lib/src/main/AndroidManifest.xml
+++ b/kin-backup-and-restore/kin-backup-and-restore-lib/src/main/AndroidManifest.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="kin.backupandrestore">
 
@@ -6,28 +7,23 @@
             android:authorities="${applicationId}.KinRecoveryFileProvider"
             android:exported="false"
             android:grantUriPermissions="true"
-            android:name="kin.backupandrestore.KinRecoveryFileProvider">
-
+            android:name=".KinRecoveryFileProvider">
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/backup_and_restore_file_provider_paths"/>
-
         </provider>
 
         <activity
             android:label="@string/backup_and_restore_backup"
-            android:name="kin.backupandrestore.backup.view.BackupActivity"
+            android:name=".backup.view.BackupActivity"
             android:screenOrientation="portrait"
             android:theme="@style/BackupAndRestoreNoActionBar"/>
-
         <activity
             android:label="@string/backup_and_restore_restore"
-            android:name="kin.backupandrestore.restore.view.RestoreActivity"
+            android:name=".restore.view.RestoreActivity"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustResize"
-            android:theme="@style/BackupAndRestoreNoActionBar"/>
-
+            android:theme="@style/BackupAndRestoreNoActionBar"
+            android:windowSoftInputMode="adjustResize"/>
     </application>
+
 </manifest>
-
-
