--- a/kin-backup-and-restore/kin-backup-and-restore-lib/build.gradle
+++ b/kin-backup-and-restore/kin-backup-and-restore-lib/build.gradle
@@ -29,6 +29,7 @@ android {
 
     sourceSets {
         test.java.srcDirs += 'src/test/kotlin'
+        androidTest.java.srcDirs += 'src/androidTest/kotlin'
     }
 }
 
@@ -41,15 +42,19 @@ dependencies {
 
     androidTestImplementation 'junit:junit:4.12'
     androidTestImplementation 'org.mockito:mockito-core:2.10.0'
-    androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'org.hamcrest:hamcrest-library:1.3'
+    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    androidTestImplementation 'com.android.support.test:rules:1.0.2'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-intents:3.0.2'
+    androidTestImplementation 'org.jetbrains.kotlin:kotlin-test-junit:1.2.30'
+    androidTestImplementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.2.30'
 
     testImplementation 'org.jetbrains.kotlin:kotlin-stdlib:1.2.71'
     testImplementation 'com.nhaarman.mockitokotlin2:mockito-kotlin:2.0.0-RC1'
     testImplementation 'junit:junit:4.12'
     testImplementation 'org.mockito:mockito-core:2.13.0'
     testImplementation 'org.robolectric:robolectric:3.6.1'
-    testImplementation 'org.hamcrest:hamcrest-library:1.3'
 
 }
 
@@ -75,7 +80,7 @@ task jacocoTestReport(type: JacocoReport) {
     sourceDirectories = files([mainSrc])
     classDirectories = files([debugTree])
     executionData = fileTree(dir: project.buildDir, includes: [
-            'jacoco/testDebugUnitTest.exec', 'outputs/code-coverage/connected/*coverage.ec'
+            'jacoco/testDebugUnitTest.exec', '**/*coverage.ec'
     ])
 }
 
@@ -87,4 +92,3 @@ afterEvaluate {
         }
     }
 }
-
