--- a/kin-backup-and-restore/kin-backup-and-restore-ui-tests/build.gradle
+++ b/kin-backup-and-restore/kin-backup-and-restore-ui-tests/build.gradle
@@ -17,7 +17,12 @@ android {
 
     }
 
-    buildTypes {
+    testOptions {
+        execution 'ANDROID_TEST_ORCHESTRATOR'
+    }
+
+
+        buildTypes {
         debug {
             testCoverageEnabled true
         }
@@ -69,6 +74,8 @@ dependencies {
     androidTestImplementation 'com.android.support.test.uiautomator:uiautomator-v18:2.1.3'
     androidTestImplementation 'org.jetbrains.kotlin:kotlin-test-junit:1.2.30'
     androidTestImplementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.2.30'
+
+    androidTestUtil 'com.android.support.test:orchestrator:1.0.2'
 
 
 }
