--- a/kin-backup-and-restore/kin-backup-and-restore-ui-tests/src/main/AndroidManifest.xml
+++ b/kin-backup-and-restore/kin-backup-and-restore-ui-tests/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="kin.backup.and.restore.ui.tests">
 
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+
     <application
         android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
