--- a/kin-sdk/kin-sdk-lib/build.gradle
+++ b/kin-sdk/kin-sdk-lib/build.gradle
@@ -24,6 +24,9 @@ android {
     buildTypes {
         debug {
             testCoverageEnabled true
+            buildConfigField "String", "INTEG_TESTS_NETWORK_FRIENDBOT", "\"$System.env.INTEG_TESTS_NETWORK_FRIENDBOT\""
+            buildConfigField "String", "INTEG_TESTS_NETWORK_PASSPHRASE", "\"$System.env.INTEG_TESTS_NETWORK_PASSPHRASE\""
+            buildConfigField "String", "INTEG_TESTS_NETWORK_URL", "\"$System.env.INTEG_TESTS_NETWORK_URL\""
         }
     }
 
