--- a/kin-backup-and-restore/kin-backup-and-restore-ui-tests/build.gradle
+++ b/kin-backup-and-restore/kin-backup-and-restore-ui-tests/build.gradle
@@ -37,11 +37,11 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     api project(':kin-backup-and-restore:kin-backup-and-restore-lib')
     api project(':kin-sdk:kin-sdk-lib')
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.2.30"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
-    testImplementation 'org.jetbrains.kotlin:kotlin-stdlib:1.2.71'
+    testImplementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test:rules:1.0.2'
@@ -49,7 +49,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-intents:3.0.2'
     androidTestImplementation 'com.android.support.test.uiautomator:uiautomator-v18:2.1.3'
     androidTestImplementation 'org.jetbrains.kotlin:kotlin-test-junit:1.2.30'
-    androidTestImplementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.2.30'
+    androidTestImplementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
 
 //jacoco unified code coverage
