--- a/kin-sdk/kin-sdk-lib/build.gradle
+++ b/kin-sdk/kin-sdk-lib/build.gradle
@@ -52,14 +52,14 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     testImplementation 'org.mockito:mockito-core:2.10.0'
     testImplementation 'org.hamcrest:hamcrest-library:1.3'
-    testImplementation 'com.android.support.test:runner:1.0.2'
     testImplementation 'com.squareup.okhttp3:mockwebserver:3.9.1'
+    testImplementation 'org.robolectric:robolectric:4.3'
+    testImplementation 'com.google.code.gson:gson:2.8.2'
 
     androidTestImplementation 'junit:junit:4.12'
     androidTestImplementation 'org.mockito:mockito-core:2.10.0'
     androidTestImplementation 'org.hamcrest:hamcrest-library:1.3'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
-
     androidTestImplementation 'org.mockito:mockito-android:2.10.0'
     androidTestImplementation 'org.mockito:mockito-android:2.10.0'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
