--- a/kin-backup-and-restore/kin-backup-and-restore-lib/build.gradle
+++ b/kin-backup-and-restore/kin-backup-and-restore-lib/build.gradle
@@ -36,18 +36,18 @@ dependencies {
     implementation project(':kin-sdk:kin-sdk-lib')
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.android.support:support-annotations:28.0.0'
-    implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.google.zxing:core:3.3.3'
 
     androidTestImplementation 'junit:junit:4.12'
-    androidTestImplementation 'org.mockito:mockito-core:2.10.0'
+    androidTestImplementation 'org.mockito:mockito-core:2.23.0'
     androidTestImplementation 'org.hamcrest:hamcrest-library:1.3'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
 
-    testImplementation 'org.jetbrains.kotlin:kotlin-stdlib:1.2.71'
-    testImplementation 'com.nhaarman.mockitokotlin2:mockito-kotlin:2.0.0-RC1'
+    testImplementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    testImplementation 'com.nhaarman.mockitokotlin2:mockito-kotlin:2.1.0'
     testImplementation 'junit:junit:4.12'
-    testImplementation 'org.mockito:mockito-core:2.13.0'
+    testImplementation 'org.mockito:mockito-core:2.23.0'
     testImplementation 'org.robolectric:robolectric:4.3'
 
 }
