--- a/kin-sdk/kin-sdk-lib/build.gradle
+++ b/kin-sdk/kin-sdk-lib/build.gradle
@@ -55,6 +55,8 @@ dependencies {
     testImplementation 'com.squareup.okhttp3:mockwebserver:3.9.1'
     testImplementation 'org.robolectric:robolectric:4.3'
     testImplementation 'com.google.code.gson:gson:2.8.5'
+    testImplementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    testImplementation 'com.nhaarman.mockitokotlin2:mockito-kotlin:2.1.0'
 
     androidTestImplementation 'junit:junit:4.12'
     androidTestImplementation 'org.mockito:mockito-core:2.23.0'
