--- a/kin-backup-and-restore/kin-backup-and-restore-lib/build.gradle
+++ b/kin-backup-and-restore/kin-backup-and-restore-lib/build.gradle
@@ -4,14 +4,14 @@ apply plugin: 'jacoco'
 apply from: '../../dependencies.gradle'
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 26
 
     defaultConfig {
         minSdkVersion 16
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
     }
 
@@ -35,15 +35,15 @@ android {
 
 dependencies {
     implementation project(':kin-sdk:kin-sdk-lib')
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'androidx.annotation:annotation:1.0.0'
-    implementation 'androidx.appcompat:appcompat:1.0.0'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
+    implementation 'com.android.support:support-annotations:26.1.0'
+    implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.google.zxing:core:3.3.3'
 
     androidTestImplementation 'junit:junit:4.12'
     androidTestImplementation 'org.mockito:mockito-core:2.23.0'
     androidTestImplementation 'org.hamcrest:hamcrest-library:1.3'
-    androidTestImplementation 'androidx.test:runner:1.1.0'
+    androidTestImplementation 'com.android.support.test:runner:1.0.2'
 
     testImplementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     testImplementation 'com.nhaarman.mockitokotlin2:mockito-kotlin:2.1.0'
